--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     },
     {
         "src": "/(css|js|assets)/(.*)",
-        "dest": "public/$1/$2"
+        "dest": "/public/$1/$2"
     }
     ],
     "env": {
