--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,12 @@
         "dest": "/api/index.php"
     },
     {
-        "src": "/(css|js|assets)/(.*)",
-        "dest": "/public/$1/$2"
+        "src": "/assets/(.*)",
+        "dest": "/public/assets/"
+    },
+    {
+        "src": "/css/(.*)",
+        "dest": "/public/css/"
     }
     ],
     "env": {
